# paddy-math

./: .gitignore  Blueprint.md  CMakeLists.txt  algebra_concepts.hpp  test_concepts.cpp
include/: algebra_concepts.hpp  complex.hpp  complex.hpp.gch
src/: complex.cpp
tests/: test_complex.cpp
